--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "dev": "nodemon --exec ts-node src/app.ts"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.33.1",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.7",
