--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "dev": "nodemon --exec ts-node src/app.ts"
+    "start": "nodemon --exec ts-node src/app.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.33.1",
@@ -14,9 +14,9 @@
     "dotenv": "^16.3.1",
     "eslint": "^8.48.0",
     "express": "^4.18.2",
+    "nodemon": "^3.0.1",
     "pg": "^8.11.3",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
-    "yarn": "^1.22.19"
+    "typescript": "^5.2.2"
   }
 }
