--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
     "baseUrl": "./", // Lets you set a base directory to resolve non-absolute module names.
     "esModuleInterop": true, // fixes some issues TS originally had with the ES6 spec where TypeScript treats CommonJS/AMD/UMD modules similar to ES6 module
     "moduleResolution": "node", // Pretty much always node for modern JS. Other option is "classic"
-    "paths": {} // A series of entries which re-map imports to lookup locations relative to the baseUrl
+    "paths": {}, // A series of entries which re-map imports to lookup locations relative to the baseUrl
+    "noEmit": true,
+    "allowImportingTsExtensions": true
 
     // Source Map
     //"sourceMap": true, // enables the use of source maps for debuggers and error reporting etc
@@ -28,6 +30,6 @@
     //"noUnusedLocals": true, // Report errors on unused local variables.
     // "noUnusedParameters": true // Report errors on unused parameters in functions
   },
-  "include": ["./**/*.ts"],
+  "include": ["./**/*.ts", "src/apps"],
   "exclude": ["node_modules/**/*"]
 }
