fix: specific ts exclude folder and api

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,5 +31,5 @@
     // "noUnusedParameters": true // Report errors on unused parameters in functions
   },
   "include": ["./**/*.ts", "src/apps"],
-  "exclude": ["node_modules/**/*"]
+  "exclude": ["node_modules"]
 }
