--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^8.48.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "pg": "^8.11.3",
     "ts-node": "^10.9.1",
