--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/mime-types": "^2.1.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.5.7",
     "@types/nodemon": "^1.19.2",
     "axios": "^1.5.0",
@@ -18,6 +20,7 @@
     "eslint": "^8.48.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mime-types": "^2.1.35",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "pg": "^8.11.3",
