--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^20.5.7",
     "@types/nodemon": "^1.19.2",
+    "@types/uuid": "^9.0.3",
     "axios": "^1.5.0",
+    "base64-arraybuffer": "^1.0.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -25,6 +27,7 @@
     "nodemon": "^3.0.1",
     "pg": "^8.11.3",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "uuid": "^9.0.0"
   }
 }
