--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "pg": "^8.11.3",
+    "stripe": "^13.6.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
     "uuid": "^9.0.0"
