--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "nodemon --exec ts-node src/app.ts"
+    "start": "nodemon --exec ts-node src/app.ts",
+    "test": "jest"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.33.1",
@@ -13,6 +14,7 @@
     "@types/node": "^20.5.7",
     "@types/nodemon": "^1.19.2",
     "@types/uuid": "^9.0.3",
+    "async-mutex": "^0.4.0",
     "axios": "^1.5.0",
     "base64-arraybuffer": "^1.0.2",
     "bcrypt": "^5.1.1",
@@ -31,5 +33,12 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.0",
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-typescript": "^7.23.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0"
   }
 }
