--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,6 @@
     //"noUnusedLocals": true, // Report errors on unused local variables.
     // "noUnusedParameters": true // Report errors on unused parameters in functions
   },
-  "include": ["./**/*.ts", "src/apps"],
+  "include": ["./**/*.ts", "src/apps", "src/__tests__/bookingRouter.test.js"],
   "exclude": ["node_modules"]
 }
